Closed Bug 381657 Opened 17 years ago Closed 17 years ago

offline cache isn't correctly updated when reading from the disk cache

Categories

(Core :: Networking: Cache, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha5

People

(Reporter: dcamp, Assigned: dcamp)

References

Details

Attachments

(1 file)

Attached patch v1Splinter Review
When the HTTP channel is serving data from the disk/memory caches, ProcessResponse() is never called.  If that isn't called, the offline cache listener is never installed.  This patch installs the offline cache listener in ReadFromCache().
Attachment #265734 - Flags: superreview?(cbiesinger)
Attachment #265734 - Flags: review?(cbiesinger)
Blocks: 373231
Attachment #265734 - Flags: superreview?(cbiesinger)
Attachment #265734 - Flags: superreview+
Attachment #265734 - Flags: review?(cbiesinger)
Attachment #265734 - Flags: review+
checked in.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: