Bug 381657. Install offline cache listener even for loads from the disk/memory caches. patch by Dave Camp, r+sr=biesi