netwerk/protocol/http/src/nsHttpChannel.cpp
@@ -1803,6 +1803,27 @@ nsHttpChannel::ReadFromCache()
         }
     }
 
+    // set up the offline cache entry for writing
+    if (mCacheForOfflineUse) {
+        PRBool shouldUpdateOffline;
+        rv = ShouldUpdateOfflineCacheEntry(&shouldUpdateOffline);
+        if (NS_FAILED(rv)) return rv;
+
+        if (shouldUpdateOffline) {
+            LOG(("writing to the offline cache"));
+            rv = InitOfflineCacheEntry();
+            if (NS_FAILED(rv)) return rv;
+
+            if (mOfflineCacheEntry) {
+                rv = InstallOfflineCacheListener();
+                if (NS_FAILED(rv)) return rv;
+            }
+        } else {
+            LOG(("offline cache is up to date, not updating"));
+            CloseOfflineCacheEntry();
+        }
+    }
+
     // open input stream for reading...
     nsCOMPtr<nsIInputStream> stream;
     rv = mCacheEntry->OpenInputStream(0, getter_AddRefs(stream));
